fixed surplus left padding on mobile view

--- a/frontend_v2/src/index.css
+++ b/frontend_v2/src/index.css
@@ -82,6 +82,16 @@ body {
   padding-left: 206.3px;
 }
 
+@media (max-width: 768px) {
+  .page-content {
+    display: flex;
+    flex-direction: row;
+    height: 100vh;
+    width: 100%;
+    padding: 0px;
+  }
+}
+
 .nav-container {
   position: fixed;
   display: flex;
